090515 cs  wtt       Ctrl/Doubleclick MB1 to insert selected object into an objid attribute also works on attrref attributes.
090515 cs  wtt       Popup menu on attributes. Methods HelpClass, InsertSelectedObject and ChangeValue added.
090515 cs  wtt       Bugfix in ConnectGraph method for PlantHier objects.
090518 cs  wb        Wb method PostRename added and implemented for XttGraph and ProjectReg objects.
090518 cs  wb        Advanced user set as default in wb.
090630 cs  wb        Directory database changed from BerkeleyDb to wb_load format.
090701 cs  plc       Env variable PWR_EXT_INC added to plc compile command. Replaces pwrp_cmn.
090803 cs  wb        Bugfix in loading wbload file with objects containing object attributes.
090804 cs  wb        Version check at package generation disabled for detached classvolumes.
090902 cs  plc       Compile error for reference to disabled signal (not in template code).
090909 cs  wb        Bugfix in Connect wb method, couldn't handle array element attributes.
090909 cs  wb        Limitation of wb_load files in one directory changed from 500 to 1000.
091020 cs  wb        New crossreference window and method in wtt.
091020 cs  wb        Expand/Compress in plc editor on GetATp, GetDTp, StoATp etc.
091021 cs  wb        Crossreferences on channels added.
091028 cs  wb        Syntax check works again with new check functions, and SyntaxCheck in configurator popup menu.
091030 cs  wb        History log in wb.
091104 cs  wb        Build method for WebGraph objects added.
091208 cs  wb        PostCreate methods for Channels added to set default number and representation.
091208 cs  wb        Default name for created objects in wtt fetched from name of previous sibling.
091209 cs  wb        ConnectAttribute method added to SevHist.
091218 cs  wb        Bugfix for next cix and next oix in ced.
091218 cs  wb        Bugfix in wb_vrepdb:child().
100111 cs  wb        Mysql classvolume databases.