@@ -1038,6 +1038,7 @@ int CnvWblToH::check_typename( char *type_volume, char *type_name)
 	"pwr_tPrivMask",
 	"pwr_tProString40",
 	"pwr_tDataRef",
+	"pwr_tConfigStatusEnum",
 	""};
 
     for ( name = valid_names[0]; strcmp(name,"") != 0; 
