@@ -82,6 +82,20 @@ SObject pwrb:Class
           Attr TypeRef = "pwrb:Type-WebTargetEnum"
         EndBody
       EndObject
+      !/**
+      !  @Summary Configuration status.
+      !  Configuration status.
+      !  Status in the development environment for an hierarchy, 
+      !  plcprogram or process graph, set by the designer to indicate
+      !  the current state. If a status is set for an object, it is 
+      !  marked red, yellow or green in the configurator. Also the 
+      !  status text if viewed surrounded by angel brackets.
+      !*/
+      Object ConfigurationStatus $Attribute 4
+        Body SysBody
+          Attr TypeRef = "pwrs:Type-$ConfigStatusEnum"
+        EndBody
+      EndObject
     EndObject
     Object NavigatorPosnn $Menu
       Object Pointed $Menu
