@@ -152,3 +152,5 @@
 091218 cs  wb        Bugfix for next cix and next oix in ced.
 091218 cs  wb        Bugfix in wb_vrepdb:child().
 100111 cs  wb        Mysql classvolume databases.
+100118 cs  plc       Toggle button in plc editor for feedback connections.
+100120 cs  wb        Functionality to view configuration status added.
